--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 				<h1>About Me</h1>
 				<hr>
 				<img src="assets/images/my-picture.jpeg">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et tempus elit. Sed fermentum rhoncus lectus vel volutpat. Fusce massa dui, dapibus et libero at, volutpat sollicitudin mauris. Nunc condimentum sodales odio ut malesuada. Vivamus eget iaculis nibh, a lobortis justo. Sed aliquet risus ut scelerisque tincidunt. Nulla vitae metus ut dui faucibus dignissim.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et tempus elit. Sed fermentum rhoncus lectus vel volutpat. Fusce massa dui, dapibus et libero at, volutpat sollicitudin mauris. Nunc condimentum sodales odio ut malesuada.</p>
 
-				<p>Nunc id posuere massa. Suspendisse potenti. Integer lacinia sapien elit, sed auctor urna maximus eget. Mauris sed sollicitudin mi, tempus efficitur magna. Sed sagittis tempus volutpat. Duis ultricies urna sit amet vehicula tristique. Pellentesque a velit convallis, sollicitudin felis id, blandit dui. Mauris ornare sem sit amet dolor blandit, sed accumsan nibh ultricies. Vivamus eget mauris tincidunt, euismod sem in, iaculis risus. Pellentesque eu aliquam nibh. Integer rutrum sed nibh auctor iaculis.</p>
+				<p>Nunc id posuere massa. Suspendisse potenti. Integer lacinia sapien elit, sed auctor urna maximus eget. Mauris sed sollicitudin mi, tempus efficitur magna. Sed sagittis tempus volutpat. Duis ultricies urna sit amet vehicula tristique.</p>
 			</main>
 
 			<!--Sidebar-->
