--- a/portfolio.html
+++ b/portfolio.html
@@ -31,20 +31,25 @@
 			<main class="main-content" role="main">	
 				<h1>Portfolio</h1>
 				<hr>
-				<div>
-					<img class="portfolio-img" src="assets/images/hangman.jpeg">
+				<div class="work">
+					<img src="assets/images/hangman.jpg">
+					<h2>Hangman</h2>
 				</div>
-				<div>
-					<img class="portfolio-img" src="assets/images/rpg-game.jpeg">
+				<div class="work">
+					<img src="assets/images/rpg-game.jpg">
+					<h2>RPG Game</h2>
 				</div>
-				<div>
-					<img class="portfolio-img" src="assets/images/trivia-game.jpeg">
+				<div class="work">
+					<img src="assets/images/trivia-game.jpg">
+					<h2>Trivia Game</h2>
 				</div>
-				<div>
-					<img class="portfolio-img" src="assets/images/rutgers-info-widget.jpeg">
+				<div class="work">
+					<img src="assets/images/rutgers-info-widget.jpg">
+					<h2>Rutgers Info Widget</h2>
 				</div>
-				<div>
-					<img class="portfolio-img" src="assets/images/rock-paper-scissors.jpeg">
+				<div class="work">
+					<img src="assets/images/rock-paper-scissors.jpg">
+					<h2>Rock Paper Scissors</h2>
 				</div>
 			</main>
 
