--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 			<div class="container">
 				<nav class="navbar">
 				    <div class="navbar-header">
-				      	<a href="#"><h1>Jhongert Fuertes</h1></a>
+				      	<a href="index.html"><h1>Jhongert Fuertes</h1></a>
 				    </div>
 				    
 				    <div class="navbar-nav">
@@ -47,9 +47,9 @@
 				<h2>Connect with Me</h2>
 				<hr>
 				<div class="social">
-					<a href="#"><img src="assets/images/github.png"></a>
-					<a href="#"><img src="assets/images/linkedin.png"></a>
-					<a href="#"><img src="assets/images/stackoverflow.png"></a>
+					<a href="https://github.com/jhongert" target="_blank"><img src="assets/images/github.png"></a>
+					<a href="https://www.linkedin.com/in/jhongertf" target="_blank"><img src="assets/images/linkedin.png"></a>
+					<a href="http://stackoverflow.com/users/7700716/jhongert-fuertes" target="_blank"><img src="assets/images/stackoverflow.png"></a>
 				</div>
 			</aside>
 			<!-- End sidebar -->
