--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="container">
 				<nav class="navbar">
 				    <div class="navbar-header">
-				      	<a href="#"><h1>Jhongert Fuertes</h1></a>
+				      	<a href="index.html"><h1>Jhongert Fuertes</h1></a>
 				    </div>
 				    
 				    <div class="navbar-nav">
@@ -33,7 +33,7 @@
 			<main class="main-content" role="main">	
 				<h1>About Me</h1>
 				<hr>
-				<img src="assets/images/my-picture.jpeg">
+				<img src="assets/images/myPict.jpg">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et tempus elit. Sed fermentum rhoncus lectus vel volutpat. Fusce massa dui, dapibus et libero at, volutpat sollicitudin mauris. Nunc condimentum sodales odio ut malesuada.</p>
 
 				<p>Nunc id posuere massa. Suspendisse potenti. Integer lacinia sapien elit, sed auctor urna maximus eget. Mauris sed sollicitudin mi, tempus efficitur magna. Sed sagittis tempus volutpat. Duis ultricies urna sit amet vehicula tristique.</p>
@@ -44,9 +44,9 @@
 				<h2>Connect with Me</h2>
 				<hr>
 				<div class="social">
-					<a href="#"><img src="assets/images/github.png"></a>
-					<a href="#"><img src="assets/images/linkedin.png"></a>
-					<a href="#"><img src="assets/images/stackoverflow.png"></a>
+					<a href="https://github.com/jhongert" target="_blank"><img src="assets/images/github.png"></a>
+					<a href="https://www.linkedin.com/in/jhongertf" target="_blank"><img src="assets/images/linkedin.png"></a>
+					<a href="http://stackoverflow.com/users/7700716/jhongert-fuertes" target="_blank"><img src="assets/images/stackoverflow.png"></a>
 				</div>
 			</aside>
 			<!-- End sidebar -->
