--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 			<div class="container">
 				<nav class="navbar">
 				    <div class="navbar-header">
-				      	<a href="#"><h1>Jhongert Fuertes</h1></a>
+				      	<a href="index.html"><h1>Jhongert Fuertes</h1></a>
 				    </div>
 				    
 				    <div class="navbar-nav">
@@ -31,24 +31,24 @@
 			<main class="main-content" role="main">	
 				<h1>Portfolio</h1>
 				<hr>
-				<div class="work">
-					<img src="assets/images/hangman.jpg">
+				<div class="portfolio-item">
+					<img src="assets/images/hangman.jpg" alt="Hangman">
 					<h2>Hangman</h2>
 				</div>
-				<div class="work">
-					<img src="assets/images/rpg-game.jpg">
+				<div class="portfolio-item">
+					<img src="assets/images/rpg-game.jpg" alt="RPG Game">
 					<h2>RPG Game</h2>
 				</div>
-				<div class="work">
-					<img src="assets/images/trivia-game.jpg">
+				<div class="portfolio-item">
+					<img src="assets/images/trivia-game.jpg" alt="Trivia Game">
 					<h2>Trivia Game</h2>
 				</div>
-				<div class="work">
-					<img src="assets/images/rutgers-info-widget.jpg">
+				<div class="portfolio-item">
+					<img src="assets/images/rutgers-info-widget.jpg" alt="Rutgers Info Widget">
 					<h2>Rutgers Info Widget</h2>
 				</div>
-				<div class="work">
-					<img src="assets/images/rock-paper-scissors.jpg">
+				<div class="portfolio-item">
+					<img src="assets/images/rock-paper-scissors.jpg" alt="Rock Paper Scissors">
 					<h2>Rock Paper Scissors</h2>
 				</div>
 			</main>
@@ -58,9 +58,9 @@
 				<h2>Connect with Me</h2>
 				<hr>
 				<div class="social">
-					<a href="#"><img src="assets/images/github.png"></a>
-					<a href="#"><img src="assets/images/linkedin.png"></a>
-					<a href="#"><img src="assets/images/stackoverflow.png"></a>
+					<a href="https://github.com/jhongert" target="_blank"><img src="assets/images/github.png"></a>
+					<a href="https://www.linkedin.com/in/jhongertf" target="_blank"><img src="assets/images/linkedin.png"></a>
+					<a href="http://stackoverflow.com/users/7700716/jhongert-fuertes" target="_blank"><img src="assets/images/stackoverflow.png"></a>
 				</div>
 			</aside>
 		<!-- End sidebar -->
