--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es-us">
 	<head>
 		<meta charset="UTF-8">
-		<title>Jhongert Fuertes</title>
+		<title>Jhongert Fuertes | About Me</title>
 
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -55,7 +55,7 @@
 
 		<!--Footer-->
 		<footer>
-			<p>&#169;Copyright 2017 Jhongert Fuertes</p>
+			<p>&#169; Copyright 2017 Jhongert Fuertes</p>
 		</footer>
 	</body>
 </html>
