--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="es-us">
 	<head>
 		<meta charset="UTF-8">
-		<title>Jhongert Fuertes</title>
+		<title>Jhongert Fuertes | Portfolio</title>
 
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -33,23 +33,23 @@
 				<hr>
 				<div class="portfolio-item">
 					<img src="assets/images/hangman.jpg" alt="Hangman">
-					<h2>Hangman</h2>
+					<a href="#"><h2>Hangman</h2></a>
 				</div>
 				<div class="portfolio-item">
 					<img src="assets/images/rpg-game.jpg" alt="RPG Game">
-					<h2>RPG Game</h2>
+					<a href="#"><h2>RPG Game</h2></a>
 				</div>
 				<div class="portfolio-item">
 					<img src="assets/images/trivia-game.jpg" alt="Trivia Game">
-					<h2>Trivia Game</h2>
+					<a href="#"><h2>Trivia Game</h2></a>
 				</div>
 				<div class="portfolio-item">
 					<img src="assets/images/rutgers-info-widget.jpg" alt="Rutgers Info Widget">
-					<h2>Rutgers Info Widget</h2>
+					<a href="#"><h2>Rutgers Info Widget</h2></a>
 				</div>
 				<div class="portfolio-item">
 					<img src="assets/images/rock-paper-scissors.jpg" alt="Rock Paper Scissors">
-					<h2>Rock Paper Scissors</h2>
+					<a href="#"><h2>Rock Paper Scissors</h2></a>
 				</div>
 			</main>
 
@@ -68,7 +68,7 @@
 
 		<!--Footer-->
 		<footer>
-			<p>&#169;Copyright 2017 Jhongert Fuertes</p>
+			<p>&#169; Copyright 2017 Jhongert Fuertes</p>
 		</footer>
 	</body>
 </html>
